--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@
                     </nav>
                 </div>
             </div>
+            <p>More ways to shop: <a href="#">Find an Apple Store</a> or <a href="#">other retailer</a> near you. Or call 1-800-MY-APPLE.</p>
             <hr>
             <div class="bottom"></div>
         </div>
